Fixed Heading Spacing Issue

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -53,15 +53,15 @@ h1 {
 
 h2 {
   word-spacing: 2px;
-}
-
-h2::after {
-  content: "";
-  display: block;
-  height: 2px;
-  width: 100px;
-  margin: 0 auto;
-  margin-top: 30px;
+  /*&::after {
+        content: "";
+        display: block;
+        height: 2px;
+        width: 100px;
+        background-color: $color-primary;
+        margin: 0 auto;
+        margin-top: 30px;
+    }*/
 }
 
 h3 {
